[package]
name = "csx64"
version = "0.1.0"
authors = ["dragazo <37459229+dragazo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bytemuck = "1.4.1"
rug = "1.11.0"
memchr = "2.3.3"
num-traits = "0.2.12"
num-derive = "0.3.2"
rand = { version = "0.7.3", features = ["getrandom"] }
rand_xorshift = "0.2.0"