[package]
name = "csx64"
version = "0.1.2"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/csx64-rs-lib"
documentation = "https://docs.rs/csx64"
description = """
An Intel-style x64 assembler and executor.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bytemuck = "1.4.1"
rug = "1.11.0"
memchr = "2.3.4"
num-traits = "0.2.14"
num-derive = "0.3.3"
rand = { version = "0.8.0", features = ["getrandom"] }
rand_xorshift = "0.3.0"